# llm

./: .gitignore  README.md  mise.toml  mops.toml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: tests.yml  typescript-tests.yml
examples/icp-agent-motoko/: candid.did  dfx.json  mops.toml
examples/icp-agent-motoko/src/backend/: main.mo
examples/icp-agent-motoko/src/icp-agent-motoko-backend/: llm.mo  main.mo
examples/icp-agent-rust/: README.md  dfx.json  justfile
examples/icp-lookup-agent-motoko/: README.md  dfx.json  mops.toml
examples/icp-lookup-agent-rust/: README.md  dfx.json
examples/quickstart-agent-motoko/: .gitignore  README.md  dfx.json  icp.yaml  justfile  mops.toml
examples/quickstart-agent-rust/: .gitignore  README.md  dfx.json  icp.yaml
examples/quickstart-agent-rust/src/backend/: Cargo.toml  backend.did
examples/quickstart-agent-rust/src/backend/src/: lib.rs
examples/quickstart-agent-typescript/: .gitignore  README.md  dfx.json  package-lock.json  package.json
init_args/: groq.did  local_groq.did  local_ollama.did  ollama.did
motoko/: README.md  mops.toml
motoko/src/: chat.mo  lib.mo
motoko/test/: chat.test.mo  tool.test.mo
rust/: Cargo.toml  README.md
rust/src/: chat.rs  lib.rs  tool.rs
src/: chat.rs  lib.rs
typescript/: README.md  init.sh  jest.config.js  package.json  pnpm-lock.yaml
typescript/src/: index.ts
typescript/tests/: builders.test.ts  example-usage.test.ts  integration.test.ts  messages.test.ts  setup.ts
typescript/tests/__mocks__/: azle.ts
(+39 files in other folders)
